--- a/layouts/partials/foot_custom.html
+++ b/layouts/partials/foot_custom.html
@@ -1,3 +1,12 @@
 {{ if .IsPage }}
   {{ template "_internal/disqus.html" . }}
 {{ end }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-91257483-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-91257483-1');
+</script>
